--- a/CadastroCliente/templates/lista_profissoes.html
+++ b/CadastroCliente/templates/lista_profissoes.html
@@ -8,15 +8,15 @@
 </head>
 <body>
 
-<h1>Cliente Senac - SMP</h1>
+    <h1>Profissao Senac</h1>
 
-<ul>
-    {%for x in cliente%}
-    <li>{{ x.nome }}</li>
-    {% endfor %}
+    <ul>
+        {%for x in profissao%}
+        <li>{{ x.nome }}</li>
+        {% endfor %}
+        
+    </ul>
     
-</ul>
-
-
+    
 </body>
 </html>
