--- a/CadastroCliente/templates/lista_profissoes.html
+++ b/CadastroCliente/templates/lista_profissoes.html
@@ -12,7 +12,7 @@
 
     <ul>
         {%for x in profissao%}
-        <li>{{ x.nome }}</li>
+        <li>{{ x.profissao}}</li>
         {% endfor %}
         
     </ul>
