--- a/CadastroCliente/templates/cliente_detalhes.html
+++ b/CadastroCliente/templates/cliente_detalhes.html
@@ -12,17 +12,50 @@
     /<table border="1">
         <tr>
             <td>Nome:</td>
-            <td>10/04/1985</td>
+            <td>{{ cliente.nome}}</td>
         </tr>
+
         <tr>
             <td>Data de Nascimento:</td>
-            <td>{{ cliente.data_nascimento }}</td>
+            <td>{{ cliente.data_nascimento|date:"d/m/Y" }}</td>
         <tr>
             <td>Endereçco:</td>
-            <td>Av. Marechal Tito 1500 - São Miguel Paulista</td>
+            <td>{{ cliente.endereco }}, {{ cliente.numero }}, {{ cliente.bairro }}, {{cliente.cidade}}, Av. Marechal Tito 1500 - São Miguel Paulista</td>
         </tr>    
+        <tr>
 
+        <tr>
+            <td>cep:</td>
+            <td>{{ cliente.cep }}</td>
         </tr>
+
+            <td>cpf:</td>
+            <td>{{ cliente.cpf }}</td>
+        <tr>
+            <td>email:</td>
+            <td> {{ cliente.email }}</td>
+        <tr>
+            <td>matricula:</td>
+            <td>{{ cliente.matricula }}</td>
+        <tr>
+            <td>renda_mensal:</td>
+            <td>{{ cliente.renda_mensal }}</td>
+        <tr>
+            <td>ativo</td>
+            <td>{{ cliente.ativo }}</td>
+        <tr>
+            <td>estado_civil:</td>
+            <td>{{ clinte.get_estado_civil_display }}</td>
+        <tr>
+            <td>Profissão:</td>
+            <td>{{ cliente.profissao }}</td>
+        <tr>
+            <td>interesses:</td>
+            <td>{{ cliente.interesses.all|join:"," }}</td>
+        </tr>
+        </tr>
+       
+
     </table>
     
 </body>
