--- a/CadastroCliente/templates/cliente_detalhes.html
+++ b/CadastroCliente/templates/cliente_detalhes.html
@@ -41,7 +41,7 @@
             <td>renda_mensal:</td>
             <td>{{ cliente.renda_mensal }}</td>
         <tr>
-            <td>ativo</td>
+            <td>ativo:</td>
             <td>{{ cliente.ativo }}</td>
         <tr>
             <td>estado_civil:</td>
